Ajuste de productos y visibilidad correcta

--- a/src/app/inventory/inventory.component.css
+++ b/src/app/inventory/inventory.component.css
@@ -54,7 +54,7 @@
   border: none;
   border-radius: 5px;
   box-sizing: border-box;
-  background-color: #333; /* Dark grey background */
+  background-color: #f8f8f8; /* Dark grey background */
   color: #fff; /* White text */
   margin-bottom: 20px;
   width: 70%;
